--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "firebase-admin": "^13.0.2",
     "http-errors": "~2.0.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
