--- a/src/config/config.json
+++ b/src/config/config.json
@@ -16,11 +16,7 @@
     "port": 3306
   },
   "production": {
-    "username": "root",
-    "password": "",
-    "database": "homeconnect_prod",
-    "host": "127.0.0.1",
-    "dialect": "mysql",
-    "port": 3306
+    "use_env_variable": "JAWSDB_MARIA_URL",
+    "dialect": "mysql"
   }
 }
