--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "morgan": "~1.9.1",
     "mysql2": "^3.12.0",
     "nodemailer": "^6.9.16",
+    "nodemailer-express-handlebars": "^7.0.0",
     "redis": "^4.7.0",
     "sequelize": "^6.37.5",
     "socket.io": "^4.8.1",
