--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
-    "brcypt": "^1.0.1",
     "bull": "^4.16.5",
     "cookie-parser": "~1.4.7",
     "debug": "~2.6.9",
@@ -23,7 +21,7 @@
     "morgan": "~1.9.1",
     "mysql2": "^3.12.0",
     "nodemailer": "^6.9.16",
-    "nodemailer-express-handlebars": "^7.0.0",
+    "nodemailer-express-handlebars": "6.0.0",
     "redis": "^4.7.0",
     "sequelize": "^6.37.5",
     "socket.io": "^4.8.1",
